Removed Pets tab and added Admin tab

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         			<a id="customers" class="nav-link" href="customers.html">Customers</a>
       			</li>
       			<li class="nav-item">
-        			<a id="pets" class="nav-link" href="customers.html">Pets</a>
-      			</li>
-      			<li class="nav-item">
         			<a id="classes" class="nav-link" href="classes.html">Classes</a>
       			</li>
       			<li class="nav-item">
         			<a id="vets" class="nav-link" href="vets.html">Vets</a>
+      			</li>
+      			<li class="nav-item">
+        			<a id="admin" class="nav-link" href="admin.html">Admin</a>
       			</li>
     		</ul>
   		</div>
