--- a/classes.html
+++ b/classes.html
@@ -51,13 +51,13 @@
         			<a id="customers" class="nav-link" href="customers.html">Customers</a>
       			</li>
       			<li class="nav-item">
-        			<a id="pets" class="nav-link" href="customers.html">Pets</a>
-      			</li>
-      			<li class="nav-item">
         			<a id="classes" class="nav-link" href="classes.html"><span class="sr-only">(current)</span>Classes</a>
       			</li>
       			<li class="nav-item">
         			<a id="vets" class="nav-link" href="vets.html">Vets</a>
+      			</li>
+      			<li class="nav-item">
+        			<a id="admin" class="nav-link" href="admin.html">Admin</a>
       			</li>
     		</ul>
   		</div>
@@ -70,6 +70,76 @@
 
   <br>
   <br>
+
+  <!-- This search functionality was created using Bootstrap cards. It 
+  	places the content nicely in a succinct container and allows the user
+  	to easily select what they're searching for.
+  	https://getbootstrap.com/docs/5.0/components/card/
+  -->
+  <div class="card">
+  <div class="card-header">
+    Search for a class
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Search By: </h5>
+    <form action="" method="post">
+    	<fieldset>
+    		<div class="form-check form-check-inline">
+    			<input class="form-check-input" type="radio" name="searchClasses" id="className" value="className" checked>
+  				<label class="form-check-label" for="className">Class Name</label>
+  			</div>
+
+  			<div class="form-check form-check-inline">
+  				<input class="form-check-input" type="radio" name="searchClasses" id="day" value="day">
+  				<label class="form-check-label" for="day">Day</label>
+  			</div>
+
+  			<div class="form-check form-check-inline">
+  				<input class="form-check-input" type="radio" name="searchClasses" id="time" value="time">
+  				<label class="form-check-label" for="time">Time</label>
+  			</div>
+
+  			<div class="form-check form-check-inline">
+  				<input class="form-check-input" type="radio" name="searchClasses" id="price" value="price">
+  				<label class="form-check-label" for="price">Price</label>
+  			</div>
+
+  			<div>
+  				<input type="text" style="width: 400px;">
+  				<button type="submit" class="btn btn-primary">Search Classes</button>
+  			</div>
+    	</fieldset>
+  	
+  	</div>
+</div>
+
+<!-- Adding a dummy table of what users will see after searching -->
+<div class="contianer">
+	<h5 class="card-title">Current Classes</h5>
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th scope="col">#</th>
+				<th scope="col">Class Name</th>
+				<th scope="col">Description</th>
+				<th scope="col">Day</th>
+				<th scope="col">Time</th>
+				<th scope="col">Price</th>
+			</tr>
+		</thead>
+		<tbody>
+			<th scope="row">1</th>
+			<td> Puppy Training 1</td>
+			<td>For puppies 8 weeks old to 20 weeks old. Teaches basic interaction and commands</td>
+			<td>Monday</td>
+			<td>1300</td>
+			<td>$100</td>
+		</tbody>
+
+
+	</table>
+
+</div>
 
   <!-- Footer gets pushed down as content is added -->
   <div class="footer">
