--- a/classes.html
+++ b/classes.html
@@ -48,7 +48,7 @@
         			<a id="home" class="nav-link" href="index.html">Home</a>
       			</li>
       			<li class="nav-item">
-        			<a id="customers" class="nav-link" href="customers.html">Customers</a>
+        			<a id="customers" class="nav-link" href="pets.html">Pets</a>
       			</li>
       			<li class="nav-item">
         			<a id="classes" class="nav-link" href="classes.html"><span class="sr-only">(current)</span>Classes</a>
