--- a/vets.html
+++ b/vets.html
@@ -80,7 +80,7 @@
   -->
   <div class="card">
   <div class="card-header">
-    Find a Pet!
+    Search for a Vet
   </div>
   <div class="card-body">
     <h5 class="card-title">Search By: </h5>
