updated navbar to reflect Trinity's pages

--- a/admin.html
+++ b/admin.html
@@ -24,7 +24,7 @@
 	<!-- Including my own CSS-->
 	<link rel="stylesheet" type="text/css" href="css/admin.css">
 
-		<title>Hello World Pets! - Classes</title>
+		<title>Hello World Pets! - Admin</title>
 
 </head>
 
@@ -52,6 +52,9 @@
         			<a id="customers" class="nav-link" href="customers.html">Customers</a>
       			</li>
       			<li class="nav-item">
+        			<a id="pets" class="nav-link" href="pets.html">Pets</a>
+      			</li>
+      			<li class="nav-item">
         			<a id="classes" class="nav-link" href="classes.html">Classes</a>
       			</li>
       			<li class="nav-item">
@@ -66,7 +69,7 @@
 
   <!-- Header -->
   <div class="adminHeader">
-    <h1>Make Changes to Here</h1>
+    <h1>Make Changes Here</h1>
   </div>
 
 
@@ -243,6 +246,22 @@
 		</tbody>
 	</table>
 </div>
+
+<div class="footer">
+		<div class="container">
+  			<div id="footerRow" class="row">
+    			<div class="col-sm-4">
+      				Contact Us:
+    			</div>
+    			<div class="col-sm-4">
+      				<p>1234 Some Road, USA</p>
+    			</div>
+    			<div class="col-sm-4">
+      				<p>Phone: 123-456-7890</p>
+    			</div>
+  			</div>
+		</div>
+	</div>
 
 
 </body>
