--- a/classes.html
+++ b/classes.html
@@ -51,6 +51,9 @@
         			<a id="customers" class="nav-link" href="customers.html">Customers</a>
       			</li>
       			<li class="nav-item">
+        			<a id="pets" class="nav-link" href="pets.html">Pets</a>
+      			</li>
+      			<li class="nav-item">
         			<a id="classes" class="nav-link" href="classes.html"><span class="sr-only">(current)</span>Classes</a>
       			</li>
       			<li class="nav-item">
