Add customers.html with registration forms. Add Customers tab to Vets and Pets

--- a/pets.html
+++ b/pets.html
@@ -47,6 +47,9 @@
       			<li class="nav-item active">
         			<a id="home" class="nav-link" href="index.html">Home</a>
       			</li>
+            <li class="nav-item active">
+              <a id="home" class="nav-link" href="customers.html">Customers</a>
+            </li>
       			<li class="nav-item">
         			<a id="customers" class="nav-link" href="pets.html">Pets</a>
       			</li>
