--- a/admin.html
+++ b/admin.html
@@ -49,7 +49,7 @@
         			<a id="home" class="nav-link" href="index.html">Home</a>
       			</li>
       			<li class="nav-item">
-        			<a id="customers" class="nav-link" href="pets.html">Pets</a>
+        			<a id="customers" class="nav-link" href="customers.html">Customers</a>
       			</li>
       			<li class="nav-item">
         			<a id="pets" class="nav-link" href="pets.html">Pets</a>
