--- a/admin.html
+++ b/admin.html
@@ -8,12 +8,12 @@
 	no matter what type of device is being used. I found this code here:
 	https://getbootstrap.com/docs/4.5/getting-started/introduction/
 -->
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- I will be using Bootstrap to style my website. This chunck of link code
 		 is pulling in the bootstrap styling, which I plan on using.
 	 -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 	<!-- Using Font Awesome for Icons. I also learned this from Colt Steel's Udemy course
        You need to include their CDN in order to use their icons. The icons I will be 
@@ -39,11 +39,11 @@
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
   		<a class="navbar-brand" href="#">HWP</sup></a>
-  		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+  		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     		<span class="navbar-toggler-icon"></span>
   		</button>
 
-  		<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+  		<div class="navbar-collapse offset collapse" id="navbarNav">
     		<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       			<li class="nav-item active">
         			<a id="home" class="nav-link" href="index.html">Home</a>
@@ -69,14 +69,14 @@
 
   <!-- Header -->
   <div class="adminHeader">
-    <h1>Make Changes Here</h1>
+    <h1 style="width:100%">Make Changes Here</h1>
   </div>
 
 
   <!-- Table for Customers Data -->
-  <div class="contianer">
+  <div class="contianer" style="width:90%">
 	<h5 class="card-title">Customers</h5>
-	<table class="table table-striped">
+	<table class="table table-striped" style="width:100%">
 		<thead>
 			<tr>
 				<th scope="col">#</th>
@@ -122,9 +122,9 @@
 
 
   <!-- Table for Pets Data -->
-  <div class="contianer">
+  <div class="contianer" style="width:90%">
 	<h5 class="card-title">Pets</h5>
-	<table class="table table-striped">
+	<table class="table table-striped" style="width:100%">
 		<thead>
 			<tr>
 				<th scope="col">#</th>
@@ -166,9 +166,9 @@
 </div>
 
   <!-- Table for Classes -->
-  <div class="contianer">
+  <div class="contianer" style="width:90%">
 	<h5 class="card-title">Classes</h5>
-	<table class="table table-striped">
+	<table class="table table-striped" style="width:100%">
 		<thead>
 			<tr>
 				<th scope="col">#</th>
@@ -177,6 +177,8 @@
 				<th scope="col">Day</th>
 				<th scope="col">Time</th>
 				<th scope="col">Price</th>
+				<th scope="col">Number Enrolled</th>
+				<th scope="col">Spaces Left</th>
 				<th scope="col">Update</th>
 				<th scope="col">Delete</th>
 			</tr>
@@ -188,6 +190,8 @@
 			<td>Monday</td>
 			<td>1300</td>
 			<td>$100</td>
+			<td>3</td>
+			<td>5</td>
 			<td>
 				<button class="btn btn-info">Update</button>
 			</td>
@@ -206,9 +210,9 @@
 </div>
 
 <!-- Table for Vets -->
-  <div class="contianer">
+  <div class="contianer" style="width:90%">
 	<h5 class="card-title">Vets</h5>
-	<table class="table table-striped">
+	<table class="table table-striped" style="width:100%">
 		<thead>
 			<tr>
 				<th scope="col">#</th>
@@ -247,7 +251,17 @@
 	</table>
 </div>
 
-<div class="footer">
+	<!-- Jquery -->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
+	<!-- Bootstrap Javascript functionality to make things work -->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
+<!-- Footer --> 
+<div class="footer" style="width:100%">
 		<div class="container">
   			<div id="footerRow" class="row">
     			<div class="col-sm-4">
