Added a background image, icon in navbar, and made sure the colors matched better

--- a/admin.html
+++ b/admin.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body>
+<body style="width:100%">
 	
 	<!-- This code below came from Bootstrap. It's what they call external content. it
 		allows me to create a navbar at the top of my webpage with an icon. This navbar will
@@ -38,7 +38,7 @@
 	-->
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-  		<a class="navbar-brand" href="#">HWP</sup></a>
+  		<a class="navbar-brand" href="#"><i class="fas fa-paw"></i>  HWP</sup></a>
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     		<span class="navbar-toggler-icon"></span>
   		</button>
@@ -69,7 +69,7 @@
 
   <!-- Header -->
   <div class="adminHeader">
-    <h1 style="width:100%">Make Changes Here</h1>
+    <h1 id="adminH1" style="width:100%">Make Changes Here</h1>
   </div>
 
 
