--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	-->
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-  		<a class="navbar-brand" href="#">HWP</sup></a>
+  		<a class="navbar-brand" href="#"><i class="fas fa-paw"></i>  HWP</sup></a>
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     		<span class="navbar-toggler-icon"></span>
   		</button>
@@ -69,9 +69,11 @@
 	</nav>
 
 
-		<div class="hpHeader" style="width:100%">
+	<div class="hpHeader" style="width:100%">
 
 		<h1 id="hpTitle">Welcome to Hello World Pets!</h1>
+
+	</div>
 
 <!-- Content for body of the page. We will have two paragraphs and
        two photos that are on the same row. We will use Bootstrap's grid system
