Added icon and coloring to Trinity's pages

--- a/pets.html
+++ b/pets.html
@@ -37,7 +37,7 @@
 	-->
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-  		<a class="navbar-brand" href="#">HWP</sup></a>
+  		<a class="navbar-brand" href="#"><i class="fas fa-paw"></i>  HWP</sup></a>
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     		<span class="navbar-toggler-icon"></span>
   		</button>
@@ -68,7 +68,7 @@
 
   <!-- Header -->
   <div class="ClassHeader">
-    <h1>Our Pets and Customers</h1>
+    <h1 id="classId">Our Pets and Customers</h1>
   </div>
 
   <br>
