Add Enroll Pet to Classes and Select Vet to Register Pet Form

--- a/admin.html
+++ b/admin.html
@@ -229,12 +229,12 @@
 		</thead>
 		<tbody>
 			<th scope="row">1</th>
-			<td> John </td>
-			<td>Smith</td>
-			<td>jsmith@gmail.com</td>
-			<td>123-456-7890</td>
-			<td>Adult dogs</td>
-			<td>3</td>
+			<td>Samantha</td>
+			<td>Perkins</td>
+			<td>sperk@hwp.org</td>
+			<td>(650) 123-4567</td>
+			<td>Feline Allergist</td>
+			<td>0</td>
 			<td>
 				<button class="btn btn-info">Update</button>
 			</td>
