--- a/classes.html
+++ b/classes.html
@@ -136,6 +136,8 @@
 				<th scope="col">Price</th>
 				<th scope="col">Number Enrolled</th>
 				<th scope="col">Spaces Left</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -147,6 +149,12 @@
 			<td>$100</td>
 			<td>3</td>
 			<td>5</td>
+      <td>
+        <input type="text" style="width:100%">
+      </td>
+      <td>
+        <button class="btn btn-info">Enroll Pet</button>
+      </td>
 		</tbody>
 
 
