--- a/vets.html
+++ b/vets.html
@@ -127,11 +127,21 @@
 			</tr>
 		</thead>
 		<tbody>
-			<th scope="row">1</th>
-			<td>Samantha Perkins</td>
-			<td>Feline Allergist</td>
-			<td>(650) 123-4567</td>
-			<td>sperk@hwp.org</td>
+      <tr>
+  			<th scope="row">1</th>
+  			<td>Samantha Perkins</td>
+  			<td>Feline Allergist</td>
+  			<td>(650) 123-4567</td>
+  			<td>sperk@hwp.org</td>
+      </tr>
+
+      <tr>
+        <th scope="row">2</th>
+        <td>Aaron Wu</td>
+        <td>Avian and Canine</td>
+        <td>(650) 987-6543</td>
+        <td>awu@hwp.org</td>
+      </tr>
 		</tbody>
 
 
