--- a/customers.html
+++ b/customers.html
@@ -138,11 +138,11 @@
                                     </div>
                                 </div>
 
-                                    <div class="col-md-6 offset-md-4">
-                                        <button type="submit" class="btn btn-primary">
-                                        Register
-                                        </button>
-                                    </div>
+                                <div class="col-md-6 offset-md-4">
+                                  <button type="submit" class="btn btn-primary">
+                                    Register
+                                  </button>
+                                </div>
                                 </div>
                             </form>
                         </div>
@@ -196,24 +196,42 @@
                                     </div>
                                 </div>
 
-                                <div class="form-check">
-                                  <input class="col-md-4 form-check-input text-md-right" type="radio" name="pet-gender" id="pet_gender1">
-                                  <label class="col-md-4 form-check-label text-md-right" for="pet_gender1">
-                                    Female
-                                  </label>
-                                </div>
-                                <div class="form-check">
-                                  <input class="col-md-4 form-check-input text-md-right" type="radio" name="pet-gender" id="pet_gender2" checked>
+                                <div class="form-group row">
                                   <label class="col-md-4 form-check-label text-md-right" for="pet_gender2">
-                                    Male
+                                    Gender
                                   </label>
+                                  <div class="form-check form-check-inline">
+
+                                    <input class="form-check-input" type="radio" name="pet-gender" id="pet_gender1">
+                                    <label class="form-check-label" for="pet_gender1">
+                                      Female 
+                                    </label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="pet-gender" id="pet_gender2" checked>
+                                    <label class="form-check-label" for="pet_gender2">
+                                      Male
+                                    </label>
+                                  </div>
+                                </div>
+                                
+                                <div class="form-group row">
+                                  <label class="col-md-4 form-check-label text-md-right" for="pet_gender2">
+                                      Veterinarian
+                                  </label>
+                                  <select class="form-select" aria-label="Default select example">
+                                    <option selected>Select an option</option>
+                                    <option value="1">Samantha Perkins</option>
+                                    <option value="2">Aaron Wu</option>
+                                    <option value="3">No Vet</option>
+                                  </select>
                                 </div>
 
-                                    <div class="col-md-6 offset-md-4">
-                                        <button type="submit" class="btn btn-primary">
-                                        Register
-                                        </button>
-                                    </div>
+
+                                <div class="col-md-4 offset-md-4">
+                                  <button type="submit" class="btn btn-primary">
+                                    Add Pet
+                                  </button>
                                 </div>
                             </form>
                         </div>
@@ -227,6 +245,9 @@
 
   <!-- Jquery -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
+  <!-- Popper.min.js - this makes the dropdown menus work! -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
   <!-- Bootstrap Javascript functionality to make things work -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
