made some minor updates based on TAs feedback for project step 3

--- a/admin.html
+++ b/admin.html
@@ -177,8 +177,8 @@
 				<th scope="col">Day</th>
 				<th scope="col">Time</th>
 				<th scope="col">Price</th>
-				<th scope="col">Number Enrolled</th>
-				<th scope="col">Spaces Left</th>
+				<th scope="col">Class Enrollments</th>
+				<th scope="col">Class Seats</th>
 				<th scope="col">Update</th>
 				<th scope="col">Delete</th>
 			</tr>
@@ -202,6 +202,40 @@
 			<tr>
 				<td colspan="7">
 					<button class="btn btn-secondary">Add Class</button>
+				</td>
+			</tr>
+
+		</tbody>
+	</table>
+</div>
+
+  <!-- Table for Enrollments -->
+  <div class="contianer" style="width:90%">
+	<h5 class="card-title">Enrollments</h5>
+	<table class="table table-striped" style="width:100%">
+		<thead>
+			<tr>
+				<th scope="col">#</th>
+				<th scope="col">Pet ID</th>
+				<th scope="col">Class ID</th>
+				<th scope="col">Update</th>
+				<th scope="col">Delete</th>
+			</tr>
+		</thead>
+		<tbody>
+			<th scope="row">1</th>
+			<td>1</td>
+			<td>1</td>
+			<td>
+				<button class="btn btn-info">Update</button>
+			</td>
+			<td>
+				<button class="btn btn-danger">Delete</button>
+			</td>
+
+			<tr>
+				<td colspan="7">
+					<button class="btn btn-secondary">Enroll Pet</button>
 				</td>
 			</tr>
 
