--- a/classes.html
+++ b/classes.html
@@ -136,7 +136,7 @@
 				<th scope="col">Price</th>
 				<th scope="col">Number Enrolled</th>
 				<th scope="col">Spaces Left</th>
-        <th scope="col"></th>
+        <th scope="col">Pet ID</th>
         <th scope="col"></th>
 			</tr>
 		</thead>
